--- a/2 - multi-column/styles.css
+++ b/2 - multi-column/styles.css
@@ -15,3 +15,52 @@ h1,h2,h3 {
 p {
   color: #828b8a;
 }
+
+img {
+  border-radius: 0.5rem;
+  border: 8px solid white; 
+}
+
+header {
+  max-width: 1600px;
+  border-bottom: 1px solid rgba(165, 164, 164, 0.563);
+  margin-bottom: 1rem;
+  margin: 10px auto;
+}
+
+.grid-container {
+  max-width: 1600px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+
+article > img {
+  width: 100%;
+}
+
+article {
+  display: flex;
+  /* height: 100%; */
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+article:not(.featured) > div {
+  margin-top: auto;
+  justify-content: center;
+}
+
+.featured {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  align-items: center;
+  grid-column: span 3;
+  margin-bottom: 40px;
+}
+
+.featured > img {
+  grid-column: span 2;
+}
