holy grail layout

--- a/3 - holy-grail/styles.css
+++ b/3 - holy-grail/styles.css
@@ -8,3 +8,78 @@ ul, li {
   padding: 0;
   list-style-type: none;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+}
+
+header {
+  grid-column: 3 span;
+  text-align: center;
+  font-size: 2rem;
+  border-bottom: 1px solid #ddd;
+}
+
+nav {
+  font-size: larger;
+  padding-left: 20px;
+  border-right: 1px solid #ddd;
+} 
+
+nav p {
+  font-weight: bold;
+}
+
+article {
+  padding: 0 100px 20px;
+}
+article h2 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+article > img {
+  width: 100%;
+}
+
+aside {
+  border-left: 1px solid #ddd;
+  padding-left: 20px;
+  font-size: larger;
+}
+
+footer {
+  border-top: 1px solid #ddd;
+  grid-column: 3 span;
+  text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+  nav {
+    grid-column: 3 span;
+    border-right: 0;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+  }
+
+  nav > li {
+    display: inline-block;
+    margin-left: 20px;
+  }
+
+  article {
+    grid-column: 2 span;
+    padding: 10px 15px;
+  }
+}
+
+@media screen and (max-width: 980px) {
+ nav, article, aside {
+   grid-column: 3 span;
+ }
+
+ aside {
+   border-left: 0;
+   border-top: 1px solid #ddd;
+ }
+}
